Final version ready for #jz2012

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-This file was created by IntelliJ IDEA 11.1.3 for binding GitHub repository
+This is the example code of a RESS talk I made at JavaZone 2012.
+
+Talk notes: (TBA)
+
+The original PHP tutorial is here: http://www.netmagazine.com/tutorials/getting-started-ress
+
+-Anders / @andmag
